--- a/default/loritta.yml
+++ b/default/loritta.yml
@@ -18,3 +18,14 @@ loritta:
   page: "Página"
   clickHere: "**Clique [aqui]({0}) para baixar a imagem!**"
   youAreCurrentlyOnPage: "Você está na página {0}"
+  date:
+    aFewMilliseconds: "alguns milissegundos"
+    year: "ano"
+    day: "dia"
+    days: "dias"
+    hour: "hora"
+    hours: "horas"
+    minute: "minuto"
+    minutes: "minutos"
+    second: "segundo"
+    seconds: "segundos"
