--- a/default/commands-discord.yml
+++ b/default/commands-discord.yml
@@ -102,6 +102,8 @@ commands:
       createdAt: "Criado em"
       joinedAt: "Entrei aqui em"
       members: "Membros"
+      voiceChannels: "Voz"
+      channels: "Canais"
     servericon:
       description: "Mostra o ícone do servidor atual!"
       noIcon: "Awww, que pena, o servidor não tem um ícone para eu mostrar... Calma, não fique triste! Aqui, veja esse emoji fofis para te alegrar! {0}"
