--- a/default/commands-misc.yml
+++ b/default/commands-misc.yml
@@ -2,7 +2,7 @@ commands:
   misc:
     dbl:
       description: "Mostra informações sobre como me ajudar no Discord Bot List!"
-      info: "Você quer me ajudar a crescer e ser um bot melhor? Então vote em mim no Discord Bot List! <:discordbotlist:338808864352763904>\n\nCada voto ajuda a me divulgar para outras pessoas no Discord Bot List, e quanto mais pessoas me usam, mais popular eu ficarei!\n\nE é claro, se você votar você irá receber uma badge especial no `{0}perfil`! Legal, né? Que tal você se juntar a todas as outras pessoas que votaram também e que me ajudaram a crescer? <:lori_blobnom:412582340272062464>\n\n{1}\n\nSua badge irá aparecer em no máximo até 60 segundos após votar! 😉"
+      info: "Você quer me ajudar a crescer e ser um bot melhor? Então vote em mim no Discord Bot List! <:discordbotlist:338808864352763904>\n\nCada voto ajuda a me divulgar para outras pessoas no Discord Bot List, e quanto mais pessoas me usam, mais popular eu ficarei!\n\nE é claro, se você votar você irá receber uma badge especial no `{0}perfil`! Legal, né? Que tal você se juntar a todas as outras pessoas que votaram também e que me ajudaram a crescer? <:lori_blobnom:412582340272062464>\n\n{1}\n\nSua badge irá aparecer em no máximo até 60 segundos após votar! \U0001F609"
     language:
       description: "Sabia que eu consigo falar em outros idiomas? {0} Altere a linguagem que eu falo em seu servidor!"
       pleaseSelectYourLanguage: "Escolha a linguagem desejada!"
@@ -16,6 +16,8 @@ commands:
       removedPersonalLanguage: "Você redefiniu seu idioma pessoal! Isso quer dizer que agora eu vou falar no idioma do servidor que você está me usando!"
     donate:
       howToHelp: "Obrigada por querer me ajudar a ficar online! {1}\n\nSem a sua ajuda, eu não iria conseguir ficar online. (Afinal, sem dinheiro = sem hospedagem para eu ficar online {2})\n\nPara doar é simples e fácil! Apenas [acesse a página de doação no meu website]({0}), lá mostra todas as vantagens que você pode receber doando! {3}"
+      description: "Lista das adoráveis pessoas que me ajudam a cada mês para me manter online!"
+      doYouWannaHelp: "Você também quer ajudar?"
     help:
       lorittaHelp: "Ajuda da Loritta"
       intro:
@@ -28,3 +30,8 @@ commands:
       donate: "Me ajude a ficar online!"
       blog: "Meu Blog"
       guidelines: "Diretrizes da Comunidade"
+      description: "Mostra todos os comandos disponíveis que eu posso executar, lembrando que isto só irá mostrar os comandos habilitados no servidor que você executou a ajuda!"
+    choose:
+      description: "Precisando de ajuda para escolher alguma coisa? Então deixe-me escolher para você!"
+    ping:
+      description: "Um comando de teste para ver se eu estou funcionando, recomendo que você deixe isto ligado para testar!"
