Added crowdin's link in locales

--- a/default/commands-discord.yml
+++ b/default/commands-discord.yml
@@ -80,6 +80,7 @@ commands:
       threadCount: "Número de Threads"
       environment: "Ambiente"
       love: "Amor"
+      crowdin: "🏁 Crowdin"
     inviteinfo:
       inThisServer: "Sim, eu estou no servidor!"
       notOnTheServer: "Infelizmente eu não estou no servidor..."
