--- a/default/commands-pokemon.yml
+++ b/default/commands-pokemon.yml
@@ -3,6 +3,7 @@ commands:
     pokedex:
       description: "Pesquisa informações sobre um Pokémon"
       types: "Tipos"
+      addedInGen: "Adicionado na Geração"
       number: "Número na Pokédex"
       abilities: "Habilidades"
       baseExp: "Base EXP"
