--- a/default/commands-social.yml
+++ b/default/commands-social.yml
@@ -5,6 +5,10 @@ commands:
       profileshop: "Compre novos perfis em {0}"
       description: "Mostra o seu perfil!"
       lorittaDescription: "Olá, eu me chamo Loritta (ou, como meus amigos próximos me chamam, \"Lori\") e sou apenas um simples bot brasileiro para o Discord com várias funções jamais vistas!"
+      totalXP: "XP Total"
+      guildXP: "XP no {0}"
+      economy: "Sonhos"
+      aboutMe: "Sobre Mim"
       profile: "Perfil"
     topreputation:
       description: "Veja os usuários que deram, ou receberam, mais reputações!"
@@ -21,11 +25,13 @@ commands:
       invalidUser: "Usuário inválido!"
       description: "Dê reputação para outro usuário!"
       repSelf: "Você não pode dar reputação para si mesmo, bobinho!"
+      wait: "Você precisa esperar **{0}** antes de poder dar outra reputação!"
+      success: "deu um ponto de reputação para {0}!"
     divorce:
+      description: "E cadê o amor? Divorcie da pessoa que você está casada atualmente!"
       prepareToDivorce: "Então parece que o seu casamento não deu nada certo... Tudo bem, todos nós erramos alguma vez na vida, vida que segue, né? {0}"
       pleaseConfirm: "Caso você realmente tenha certeza que o casamento jamais irá dar certo, clique em {0}... eu irei te deixar em paz enquanto você pensa se realmente vale a pena fazer isso."
       divorced: "Então é isso, foi uma aventura e tanto, né? ...calma! Não chore, eu sei que divorciar de alguém é triste... se você continuar a chorar, eu também irei... {0} Da próxima vez, ame alguém que realmente te mereça e que te respeite, e não qualquer pessoa por aí... Melhor estar sozinho e ser feliz, do que estar em um relacionamento ruim."
-      description: "E cadê o amor? Divorcie da pessoa que você está casada atualmente!"
     birthday:
       description: "Altera a sua data de nascimento"
       invalidDate: "Data de nascimento inválida! Lembre-se, a data precisa estar no formato `dia/mês/ano`!"
@@ -58,6 +64,7 @@ commands:
     editxp:
       description: "Edita o XP de um usuário"
       moreThanZero: "XP precisa ser maior que 0!"
+      success: "XP de {0} foi alterado com sucesso!"
     gender:
       description: "Altera o seu gênero"
       whatAreYou: "Então... você é o que?"
@@ -69,7 +76,10 @@ commands:
       marryLoritta: "Eu nem te amo para querer casar com você, e além do mais, eu nem tenho idade para casar."
       alreadyMarried: "Você já está casado com outra pessoa! Use `{0}divorciar` antes de se casar com outra pessoa!"
       alreadyMarriedOther: "{0} já está casado!"
+      insufficientFunds: "Infelizmente casamentos são caros e necessitam de dinheiro para acontecer... Você precisa de mais **{0} Sonhos** para poder casar!"
+      insufficientFundsOther: "Infelizmente casamentos são caros e necessitam de dinheiro para acontecer... {0} precisa de mais **{1} Sonhos** para poder casar!"
     rank:
       description: "Veja o ranking do servidor atual!"
     aboutme:
       description: "Altere o \"Sobre Mim\" no comando de perfil!"
+      changed: "Sua mensagem de perfil foi alterada para `{0}`!"
