--- a/default/commands-undertale.yml
+++ b/default/commands-undertale.yml
@@ -2,5 +2,6 @@ commands:
   undertale:
     utbattle:
       description: "Cria um balão de fala igual ao do Undertale"
+      invalid: "Monstro `{0}` não é válido! **Lista de monstros válidos:** `{1}`"
     utbox:
       description: "Cria uma caixa de diálogo igual ao do Undertale"
