Adding wikipedia locale

--- a/default/commands-utils.yml
+++ b/default/commands-utils.yml
@@ -61,3 +61,4 @@ commands:
       description: "Traduz uma frase para outra linguagem"
     wikipedia:
       description: "Mostra uma versão resumida de uma página do Wikipedia"
+      couldntFind: "Não consegui encontrar nada relacionado á `{0}`!"
