--- a/default/commands-fun.yml
+++ b/default/commands-fun.yml
@@ -202,6 +202,9 @@ commands:
       jesusChrist: "JESUS CRISTO"
       invalidChoice: "Que pena... você perdeu, dá próxima vez escolha algo que seja válido, ok?"
       chosen: "Você escolheu {0}, eu escolhi {1}"
+      rock: "pedra"
+      paper: "papel"
+      scissors: "tesoura"
     quality:
       description: "Cria uma mensagem com Q U A L I D A D E & S I N C R O N I A"
     tiodopave:
